# RiskRoll

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  main.h
apps/compute-combinations/: CMakeLists.txt  compute-combinations.cpp
apps/compute-possibility/: CMakeLists.txt  compute-possibility.cpp
apps/compute-possibility/progress-bar/: CMakeLists.txt  progress-bar.cpp  progress-bar.h
include/: DPPermuGen.h  DicePair.h  DicePairCmp.h  RiskRoll.h
src/: CMakeLists.txt  DPPermuGen.cpp  DicePairCmp.cpp
